Closed Bug 1271058 Opened 10 years ago Closed 10 years ago

Flash of white behind transitioning objects

Categories

(Core :: Layout, defect)

48 Branch
Unspecified
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox47 --- unaffected
firefox48 + fixed
firefox49 + fixed

People

(Reporter: jrmuizel, Assigned: mattwoodrow)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached file 2.html
When you hover over the orange square the blue rectangle doesn't fade in or out the same way as Chrome
This is a regression. It works fine in Firefox 19
OS: Unspecified → Mac OS X
Looks like it was probably bug 1250718
Blocks: 1250718
Flags: needinfo?(matt.woodrow)
[Tracking Requested - why for this release]: A user visible regression from bug 1250718
It is black on windows10 w/ HWA. And I got a same regression window.
OS: Mac OS X → All
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Comment on attachment 8750161 [details] [diff] [review] Use effective opacity not local opacity for determining if a layer is opaque Review of attachment 8750161 [details] [diff] [review]: ----------------------------------------------------------------- Please swap the role of red and green in the test.
Attachment #8750161 - Flags: review?(mstange) → review+
Tracking for 48 and 49.
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Matt, are you planning to request the uplift to 48? Thanks
Flags: needinfo?(matt.woodrow)
Comment on attachment 8750161 [details] [diff] [review] Use effective opacity not local opacity for determining if a layer is opaque Approval Request Comment [Feature/regressing bug #]: bug 1250718 [User impact if declined]: Incorrect opacity during animations in rare cases [Describe test coverage new/current, TreeHerder]: Manually tested, reftest added [Risks and why]: Very low risk. [String/UUID change made/needed]: None
Flags: needinfo?(matt.woodrow)
Attachment #8750161 - Flags: approval-mozilla-aurora?
Comment on attachment 8750161 [details] [diff] [review] Use effective opacity not local opacity for determining if a layer is opaque Fix a user facing regression, taking it
Attachment #8750161 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Version: unspecified → 48 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: