Bug 1271058 - Use Layers effective opacity for determining if it is opaque. r=mstange, a=sylvestre